--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  fluro: ^1.6.3
 dev_dependencies:
   pedantic: ^1.9.0
   flutter_test:
