--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   fluro: ^1.6.3
+  provider: ^4.1.3
 dev_dependencies:
   pedantic: ^1.9.0
   flutter_test:
