--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,6 @@
 include: package:pedantic/analysis_options.yaml
+
+analyzer:
+  exclude: 
+    - lib/generated/intl/*.dart
+    - lib/generated/**/*.dart
