--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,13 @@
 name: appsolutely
 description: Flutter Starter App
-publish_to: 'none' 
+publish_to: 'none'
 version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
   cupertino_icons: ^0.1.3
   fluro: ^1.6.3
@@ -16,3 +18,5 @@ dev_dependencies:
     sdk: flutter
 flutter:
   uses-material-design: true
+flutter_intl:
+  enabled: true
