--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   fluro: ^1.6.3
   provider: ^4.1.3
+  shared_preferences: ^0.5.7+3
 dev_dependencies:
   pedantic: ^1.9.0
   flutter_test:
