--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   fluro: ^1.6.3
   provider: ^4.1.3
   shared_preferences: ^0.5.7+3
+  logging: ^0.11.4
 dev_dependencies:
   pedantic: ^1.9.0
   flutter_test:
