--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,5 +20,7 @@ dev_dependencies:
     sdk: flutter
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
 flutter_intl:
   enabled: true
